--- a/config/database.yml
+++ b/config/database.yml
@@ -18,3 +18,6 @@ test:
 production:
   <<: *default
   database: kuji_production
+  host: localhost
+  username: root
+  password: <%= ENV.fetch('DATABASE_PROD_PASSWORD') { 'root' } %>
